# sturdy_render

./: .gitignore  Cargo.toml
crates/core/: Cargo.toml
crates/core/src/: lib.rs  logging.rs
crates/core/src/detection/cpu/: mod.rs
crates/core/src/detection/operating_system/: mod.rs
crates/core/src/engine/: engine.rs
crates/core/src/renderer/: gpu.rs  mod.rs  renderer.rs
crates/core/src/renderer/primitives/: mesh.rs  mod.rs  vertex.rs
crates/core/src/renderer/wgpu/: mod.rs  pipeline.rs  vertex.rs  wgpu_renderer.rs
crates/core/src/renderer/wgpu/shaders/: triangle.vert.wgsl
crates/core/src/window/: mod.rs  window.rs
crates/runtime/: Cargo.toml
crates/runtime/src/: main.rs
